--- a/speccer.css
+++ b/speccer.css
@@ -55,7 +55,7 @@
   z-index: 100000;
   box-sizing: content-box;
 }
-.ph.speccer.dissection:after {
+.ph.speccer.dissection::after {
   content: "";
   position: absolute;
   height: var(--ph-speccer-pin-space);
@@ -64,32 +64,32 @@
   background-color: var(--ph-speccer-pin-color);
   z-index: 99999;
 }
-.ph.speccer.dissection.outline:after,
-.ph.speccer.dissection.outline.top:after {
+.ph.speccer.dissection.outline::after,
+.ph.speccer.dissection.outline.top::after {
   height: var(--ph-speccer-pin-space);
   width: var(--ph-speccer-line-width);
   top: 100%;
   right: 50%;
 }
-.ph.speccer.dissection.outline.left:after {
+.ph.speccer.dissection.outline.left::after {
   height: var(--ph-speccer-line-width);
   width: var(--ph-speccer-pin-space);
   top: 50%;
   left: 100%;
 }
-.ph.speccer.dissection.outline.right:after {
+.ph.speccer.dissection.outline.right::after {
   height: var(--ph-speccer-line-width);
   width: var(--ph-speccer-pin-space);
   top: 50%;
   right: 100%;
 }
-.ph.speccer.dissection.outline.bottom:after {
+.ph.speccer.dissection.outline.bottom::after {
   height: var(--ph-speccer-pin-space);
   width: var(--ph-speccer-line-width);
   top: calc(-100% - (var(--ph-speccer-pin-space) / 2));
   right: 50%;
 }
-.ph.speccer.dissection:after {
+.ph.speccer.dissection::after {
   content: "";
   position: absolute;
   height: var(--ph-speccer-pin-space);
@@ -98,13 +98,13 @@
   background-color: var(--ph-speccer-pin-color);
   z-index: 99999;
 }
-.ph.speccer.dissection.outline.left:after {
+.ph.speccer.dissection.outline.left::after {
   height: var(--ph-speccer-line-width);
   width: var(--ph-speccer-pin-space);
   top: 50%;
   left: 100%;
 }
-.ph.speccer.dissection.outline.right:after {
+.ph.speccer.dissection.outline.right::after {
   height: var(--ph-speccer-line-width);
   width: var(--ph-speccer-pin-space);
   top: 50%;
@@ -116,35 +116,35 @@
   color: var(--ph-speccer-measure-color);
   border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
 }
-.ph.speccer.dissection.outline.enclose.right:after {
+.ph.speccer.dissection.outline.enclose.right::after {
   left: calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)));
   right: auto;
 }
-.ph.speccer.dissection.outline.enclose.right:before {
+.ph.speccer.dissection.outline.enclose.right::before {
   left: 100%;
   right: auto;
 }
-.ph.speccer.dissection.outline.enclose.left:after {
+.ph.speccer.dissection.outline.enclose.left::after {
   left: calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space));
   right: auto;
 }
-.ph.speccer.dissection.outline.enclose.left:before {
+.ph.speccer.dissection.outline.enclose.left::before {
   right: 100%;
   left: auto;
 }
-.ph.speccer.dissection.outline.enclose.top:after {
+.ph.speccer.dissection.outline.enclose.top::after {
   top: calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space));
   bottom: auto;
 }
-.ph.speccer.dissection.outline.enclose.top:before {
+.ph.speccer.dissection.outline.enclose.top::before {
   bottom: 100%;
   top: auto;
 }
-.ph.speccer.dissection.outline.enclose.bottom:after {
+.ph.speccer.dissection.outline.enclose.bottom::after {
   top: calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)));
   bottom: auto;
 }
-.ph.speccer.dissection.outline.enclose.bottom:before {
+.ph.speccer.dissection.outline.enclose.bottom::before {
   top: 100%;
   bottom: auto;
 }
@@ -157,47 +157,47 @@
 .ph.speccer.dissection.outline.full.right {
   border-left: none;
 }
-.ph.speccer.dissection.outline.full.right:after {
+.ph.speccer.dissection.outline.full.right::after {
   left: calc(8px + var(--ph-speccer-pin-space));
 }
-.ph.speccer.dissection.outline.full.right:before {
+.ph.speccer.dissection.outline.full.right::before {
   left: 100%;
 }
 .ph.speccer.dissection.outline.full.left {
   border-right: none;
 }
-.ph.speccer.dissection.outline.full.left:after {
+.ph.speccer.dissection.outline.full.left::after {
   left: calc(-8px - var(--ph-speccer-pin-space));
 }
-.ph.speccer.dissection.outline.full.left:before {
+.ph.speccer.dissection.outline.full.left::before {
   right: 100%;
 }
 .ph.speccer.dissection.outline.full.top {
   border-bottom: none;
 }
-.ph.speccer.dissection.outline.full.top:after {
+.ph.speccer.dissection.outline.full.top::after {
   top: calc(-8px - var(--ph-speccer-pin-space));
 }
-.ph.speccer.dissection.outline.full.top:before {
+.ph.speccer.dissection.outline.full.top::before {
   bottom: 100%;
 }
 .ph.speccer.dissection.outline.full.bottom {
   border-top: none;
 }
-.ph.speccer.dissection.outline.full.bottom:after {
+.ph.speccer.dissection.outline.full.bottom::after {
   top: calc(8px + var(--ph-speccer-pin-space));
 }
-.ph.speccer.dissection.outline.full.bottom:before {
+.ph.speccer.dissection.outline.full.bottom::before {
   top: 100%;
 }
-.ph.speccer.dissection.outline.bottom:after {
+.ph.speccer.dissection.outline.bottom::after {
   height: var(--ph-speccer-pin-space);
   width: var(--ph-speccer-line-width);
   top: calc(-100% - (var(--ph-speccer-pin-space) / 2));
   right: 50%;
 }
-.ph.speccer.dissection.outline.top:after,
-.ph.speccer.dissection.outline:after {
+.ph.speccer.dissection.outline.top::after,
+.ph.speccer.dissection.outline::after {
   height: var(--ph-speccer-pin-space);
   width: var(--ph-speccer-line-width);
   top: 100%;
@@ -214,10 +214,10 @@
 .ph.speccer.dissection.outline.full.bottom {
   height: 8px;
 }
-.ph.speccer.dissection.outline.full.right:after,
-.ph.speccer.dissection.outline.full.left:after,
-.ph.speccer.dissection.outline.full.top:after,
-.ph.speccer.dissection.outline.full.bottom:after {
+.ph.speccer.dissection.outline.full.right::after,
+.ph.speccer.dissection.outline.full.left::after,
+.ph.speccer.dissection.outline.full.top::after,
+.ph.speccer.dissection.outline.full.bottom::after {
   content: attr(data-dissection-counter);
   height: var(--ph-speccer-pin-size);
   width: var(--ph-speccer-pin-size);
@@ -232,35 +232,35 @@
   font-size: 16px;
   z-index: 100000;
 }
-.ph.speccer.dissection.outline.full.right:after,
-.ph.speccer.dissection.outline.full.left:after {
+.ph.speccer.dissection.outline.full.right::after,
+.ph.speccer.dissection.outline.full.left::after {
   top: 50%;
   transform: translateY(-50%);
 }
-.ph.speccer.dissection.outline.full.top:after,
-.ph.speccer.dissection.outline.full.bottom:after {
+.ph.speccer.dissection.outline.full.top::after,
+.ph.speccer.dissection.outline.full.bottom::after {
   left: 50%;
   transform: translateX(-50%);
 }
-.ph.speccer.dissection.outline.full.right:before,
-.ph.speccer.dissection.outline.full.left:before,
-.ph.speccer.dissection.outline.full.top:before,
-.ph.speccer.dissection.outline.full.bottom:before {
+.ph.speccer.dissection.outline.full.right::before,
+.ph.speccer.dissection.outline.full.left::before,
+.ph.speccer.dissection.outline.full.top::before,
+.ph.speccer.dissection.outline.full.bottom::before {
   content: "";
   position: absolute;
   background-color: var(--ph-speccer-pin-color);
   z-index: 100000;
   display: block;
 }
-.ph.speccer.dissection.outline.full.right:before,
-.ph.speccer.dissection.outline.full.left:before {
+.ph.speccer.dissection.outline.full.right::before,
+.ph.speccer.dissection.outline.full.left::before {
   top: 50%;
   transform: translateY(-50%);
   height: var(--ph-speccer-line-width);
   width: calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width));
 }
-.ph.speccer.dissection.outline.full.top:before,
-.ph.speccer.dissection.outline.full.bottom:before {
+.ph.speccer.dissection.outline.full.top::before,
+.ph.speccer.dissection.outline.full.bottom::before {
   left: 50%;
   transform: translateX(-50%);
   width: var(--ph-speccer-line-width);
@@ -274,10 +274,10 @@
 .ph.speccer.dissection.outline.enclose.bottom {
   height: 8px;
 }
-.ph.speccer.dissection.outline.enclose.right:after,
-.ph.speccer.dissection.outline.enclose.left:after,
-.ph.speccer.dissection.outline.enclose.top:after,
-.ph.speccer.dissection.outline.enclose.bottom:after {
+.ph.speccer.dissection.outline.enclose.right::after,
+.ph.speccer.dissection.outline.enclose.left::after,
+.ph.speccer.dissection.outline.enclose.top::after,
+.ph.speccer.dissection.outline.enclose.bottom::after {
   content: attr(data-dissection-counter);
   height: var(--ph-speccer-pin-size);
   width: var(--ph-speccer-pin-size);
@@ -292,39 +292,115 @@
   font-size: 16px;
   z-index: 100000;
 }
-.ph.speccer.dissection.outline.enclose.right:after,
-.ph.speccer.dissection.outline.enclose.left:after {
+.ph.speccer.dissection.outline.enclose.right::after,
+.ph.speccer.dissection.outline.enclose.left::after {
   top: 50%;
   transform: translateY(-50%);
 }
-.ph.speccer.dissection.outline.enclose.top:after,
-.ph.speccer.dissection.outline.enclose.bottom:after {
+.ph.speccer.dissection.outline.enclose.top::after,
+.ph.speccer.dissection.outline.enclose.bottom::after {
   left: 50%;
   transform: translateX(-50%);
 }
-.ph.speccer.dissection.outline.enclose.right:before,
-.ph.speccer.dissection.outline.enclose.left:before,
-.ph.speccer.dissection.outline.enclose.top:before,
-.ph.speccer.dissection.outline.enclose.bottom:before {
+.ph.speccer.dissection.outline.enclose.right::before,
+.ph.speccer.dissection.outline.enclose.left::before,
+.ph.speccer.dissection.outline.enclose.top::before,
+.ph.speccer.dissection.outline.enclose.bottom::before {
   content: "";
   position: absolute;
   background-color: var(--ph-speccer-pin-color);
   z-index: 100000;
   display: block;
 }
-.ph.speccer.dissection.outline.enclose.right:before,
-.ph.speccer.dissection.outline.enclose.left:before {
+.ph.speccer.dissection.outline.enclose.right::before,
+.ph.speccer.dissection.outline.enclose.left::before {
   top: 50%;
   transform: translateY(-50%);
   height: var(--ph-speccer-line-width);
   width: calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width));
 }
-.ph.speccer.dissection.outline.enclose.top:before,
-.ph.speccer.dissection.outline.enclose.bottom:before {
+.ph.speccer.dissection.outline.enclose.top::before,
+.ph.speccer.dissection.outline.enclose.bottom::before {
   left: 50%;
   transform: translateX(-50%);
   width: var(--ph-speccer-line-width);
   height: calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width));
+}
+.ph.speccer.dissection.outline.subtle {
+  border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
+  background-color: var(--ph-speccer-color-text-light);
+  color: var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.subtle.top::after,
+.ph.speccer.dissection.outline.subtle.bottom::after {
+  width: 0;
+  background-color: transparent;
+  border-right: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.subtle.right::after,
+.ph.speccer.dissection.outline.subtle.left::after {
+  height: 0;
+  background-color: transparent;
+  border-top: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.full.subtle {
+  border-width: var(--ph-speccer-line-width);
+  border-style: dashed;
+  border-color: var(--ph-speccer-pin-color);
+  background-color: transparent;
+}
+.ph.speccer.dissection.outline.full.subtle.top {
+  border-bottom: none;
+}
+.ph.speccer.dissection.outline.full.subtle.bottom {
+  border-top: none;
+}
+.ph.speccer.dissection.outline.full.subtle.right {
+  border-left: none;
+}
+.ph.speccer.dissection.outline.full.subtle.left {
+  border-right: none;
+}
+.ph.speccer.dissection.outline.full.subtle::after {
+  height: var(--ph-speccer-pin-size);
+  width: var(--ph-speccer-pin-size);
+  border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
+  background-color: var(--ph-speccer-color-text-light);
+  color: var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.full.subtle.top::before,
+.ph.speccer.dissection.outline.full.subtle.bottom::before {
+  width: 0;
+  background-color: transparent;
+  border-right: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.full.subtle.right::before,
+.ph.speccer.dissection.outline.full.subtle.left::before {
+  height: 0;
+  background-color: transparent;
+  border-top: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.enclose.subtle {
+  border-style: dashed;
+}
+.ph.speccer.dissection.outline.enclose.subtle::after {
+  height: var(--ph-speccer-pin-size);
+  width: var(--ph-speccer-pin-size);
+  border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
+  background-color: var(--ph-speccer-color-text-light);
+  color: var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.enclose.subtle.top::before,
+.ph.speccer.dissection.outline.enclose.subtle.bottom::before {
+  width: 0;
+  background-color: transparent;
+  border-right: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
+}
+.ph.speccer.dissection.outline.enclose.subtle.right::before,
+.ph.speccer.dissection.outline.enclose.subtle.left::before {
+  height: 0;
+  background-color: transparent;
+  border-top: var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color);
 }
 .ph.speccer.spacing {
   pointer-events: auto;
@@ -571,4 +647,22 @@
   top: 50%;
   left: calc(100% - var(--ph-speccer-measure-size));
   transform: translateY(-50%) rotate(90deg);
+}
+.ph.speccer.measure.subtle.width.top,
+.ph.speccer.measure.subtle.width.bottom,
+.ph.speccer.measure.subtle.height.right,
+.ph.speccer.measure.subtle.height.left {
+  border-style: dashed;
+}
+.ph.speccer.measure.subtle.width.top {
+  border-bottom: none;
+}
+.ph.speccer.measure.subtle.width.bottom {
+  border-top: none;
+}
+.ph.speccer.measure.subtle.height.right {
+  border-left: none;
+}
+.ph.speccer.measure.subtle.height.left {
+  border-right: none;
 }
