--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -64,5 +64,8 @@ $ph-speccer-measure-size = 8px
   box-sizing border-box
   line-height 12px
 
+svg.ph .ph.path
+  color var(--ph-speccer-color-contrast,$ph-speccer-color-contrast )
+
 @require './anatomy.styl'
 @require './spacing.styl'
