feat: 🎸 Add support to use bezier curves/svg
✅ Closes: #18

--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -26,6 +26,9 @@
   z-index 99999
 
 
+.ph.speccer.dissection.curve::after
+  content none !important
+
 .ph.speccer.dissection.outline::after,
 .ph.speccer.dissection.outline.top::after
   height var(--ph-speccer-pin-space)
