--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -49,20 +49,29 @@ $ph-speccer-measure-size = 8px
   --ph-speccer-measure-size: $ph-speccer-measure-size;
 
 
+svg.ph,
 .ph.speccer,
 .ph.speccer::after,
 .ph.speccer::before
-  font-family var(--ph-speccer-font-family) !important
-  justify-content center
-  align-items center
-  z-index 99999
-  position absolute
   pointer-events none
   user-select none
-  display flex
-  font-size 12px
   box-sizing border-box
-  line-height 12px
+
+
+.ph.speccer,
+.ph.speccer::after,
+.ph.speccer::before
+  &:not(path)
+    font-family var(--ph-speccer-font-family) !important
+    justify-content center
+    align-items center
+    z-index 99999
+    position absolute
+    display flex
+    font-size 12px
+    line-height 12px
+
+
 
 svg.ph .ph.path
   color var(--ph-speccer-color-contrast,$ph-speccer-color-contrast )
