--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -41,11 +41,13 @@
   width var(--ph-speccer-pin-space)
   top 50%
   left 100%
+  right auto
 
 .ph.speccer.dissection.outline.right::after
   height var(--ph-speccer-line-width)
   width var(--ph-speccer-pin-space)
   top 50%
+  left auto
   right 100%
 
 .ph.speccer.dissection.outline.bottom::after
@@ -82,6 +84,12 @@
       background-color transparent
       color var(--ph-speccer-measure-color)
       border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
+      &::after
+        top calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space))
+        bottom auto
+      &::before
+        bottom 100%
+        top auto
       &.right
         &::after
           left calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)))
@@ -115,25 +123,37 @@
       background-color transparent
       color var(--ph-speccer-measure-color)
       border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
+      border-bottom none
+      &::after
+        top calc(-8px - var(--ph-speccer-pin-space))
+      &::before
+        bottom 100%
       &.right
+        border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
         border-left none
         &::after
           left calc(8px + var(--ph-speccer-pin-space))
         &::before
           left 100%
+          right auto
       &.left
+        border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
         border-right none
         &::after
           left calc(-8px - var(--ph-speccer-pin-space))
         &::before
           right 100%
+          left auto
+
       &.top
+        border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
         border-bottom none
         &::after
           top calc(-8px - var(--ph-speccer-pin-space))
         &::before
           bottom 100%
       &.bottom
+        border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
         border-top none
         &::after
           top calc(8px + var(--ph-speccer-pin-space))
@@ -161,10 +181,12 @@
 .ph.speccer.dissection.outline.full.left
   width 8px
 
+.ph.speccer.dissection.outline.full,
 .ph.speccer.dissection.outline.full.top,
 .ph.speccer.dissection.outline.full.bottom
   height 8px
 
+.ph.speccer.dissection.outline.full::after,
 .ph.speccer.dissection.outline.full.right::after,
 .ph.speccer.dissection.outline.full.left::after,
 .ph.speccer.dissection.outline.full.top::after,
@@ -188,11 +210,13 @@
   top 50%
   transform translateY(-50%)
 
+.ph.speccer.dissection.outline.full::after,
 .ph.speccer.dissection.outline.full.top::after,
 .ph.speccer.dissection.outline.full.bottom::after
   left 50%
   transform translateX(-50%)
 
+.ph.speccer.dissection.outline.full::before,
 .ph.speccer.dissection.outline.full.right::before,
 .ph.speccer.dissection.outline.full.left::before,
 .ph.speccer.dissection.outline.full.top::before,
@@ -210,6 +234,7 @@
   height var(--ph-speccer-line-width)
   width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
+.ph.speccer.dissection.outline.full::before,
 .ph.speccer.dissection.outline.full.top::before,
 .ph.speccer.dissection.outline.full.bottom::before
   left 50%
@@ -221,10 +246,12 @@
 .ph.speccer.dissection.outline.enclose.left
   width 8px
 
+.ph.speccer.dissection.outline.enclose,
 .ph.speccer.dissection.outline.enclose.top,
 .ph.speccer.dissection.outline.enclose.bottom
   height 8px
 
+.ph.speccer.dissection.outline.enclose::after,
 .ph.speccer.dissection.outline.enclose.right::after,
 .ph.speccer.dissection.outline.enclose.left::after,
 .ph.speccer.dissection.outline.enclose.top::after,
@@ -248,11 +275,13 @@
   top 50%
   transform translateY(-50%)
 
+.ph.speccer.dissection.outline.enclose::after,
 .ph.speccer.dissection.outline.enclose.top::after,
 .ph.speccer.dissection.outline.enclose.bottom::after
   left 50%
   transform translateX(-50%)
 
+.ph.speccer.dissection.outline.enclose::before,
 .ph.speccer.dissection.outline.enclose.right::before,
 .ph.speccer.dissection.outline.enclose.left::before,
 .ph.speccer.dissection.outline.enclose.top::before,
@@ -270,6 +299,7 @@
   height var(--ph-speccer-line-width)
   width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
+.ph.speccer.dissection.outline.enclose::before,
 .ph.speccer.dissection.outline.enclose.top::before,
 .ph.speccer.dissection.outline.enclose.bottom::before
   left 50%
@@ -296,17 +326,20 @@
       border-top var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
 
 .ph.speccer.dissection.outline.full.subtle
-  border-width var(--ph-speccer-line-width)
-  border-style dashed
-  border-color var(--ph-speccer-pin-color)
+  border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
   background-color transparent
+  border-bottom none
   &.top
+    border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
     border-bottom none
   &.bottom
+    border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
     border-top none
   &.right
+    border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
     border-left none
   &.left
+    border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
     border-right none
   &::after
     height var(--ph-speccer-pin-size)
