--- a/src/styles/measure.styl
+++ b/src/styles/measure.styl
@@ -1,4 +1,7 @@
 .ph.speccer.measure
+  display flex
+
+.ph.speccer.measure
   &.width
     color var(--ph-speccer-measure-color)
     border var(--ph-speccer-line-width) solid var(--ph-speccer-measure-color)
